--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
   /* background-size: cover;  */
   margin: -31px; 
   margin-left:-7px;
-  border: 6px solid rgba(0, 59, 77, 0.4); 
+  border: 6px solid rgba(25, 121, 150, 0.4); 
   border-radius: 50% !important;
 }
 
@@ -473,7 +473,7 @@ a.hoverline {
 } */
 
 a.hoverline:hover {
-  border-bottom: 3px solid #002e4d !important;
+  border-bottom: 3px solid #12517a !important;
 }
 
 #skills .card.large {
