--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@
   position: relative;
   padding: 11px 35px;
   background: #fff;
-  color: #00796b;
+  color: #01a1e0;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
@@ -227,13 +227,13 @@ ul.side-nav li {
   padding: 0;
 }
 
-/* ul.side-nav.fixed a {
+ul.side-nav.fixed a {
   box-sizing: content-box;
   color: rgb(48, 122, 207);
   display: block;
   line-height: 100%;
   padding: 10px 0 12px;
-} */
+} 
 
 ul.side-nav.fixed a {
   box-sizing: content-box;
@@ -320,7 +320,7 @@ h3 {
 } */
 
 #intro.section {
-  background: #a7ffeb repeat;
+  background: #a7dfff repeat;
   position: relative;
 }
 
