--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,7 +473,7 @@ a.hoverline {
 } */
 
 a.hoverline:hover {
-  border-bottom: 3px solid #46c5f7 !important;
+  border-bottom: 3px solid #57c6f1 !important;
 }
 
 #skills .card.large {
@@ -549,7 +549,7 @@ small {
 /* main .teal-text */
 
 .teal-text {
-  color: #5bc2f1 !important;
+  color: #06364d !important;
 }
 
 /* .teal-text {
